# Stage-2020

./: Makefile  Makefile_PCL_CUDA  README.md
cuda_test/: Makefile  reverse.cu  test.cu
ndt_cpu_test/: Makefile  README.md  eigen_test  eigen_test.cpp  ndt_cpu_main  ndt_cpu_main.cpp
ndt_cpu_test/ndt_cpu/: CMakeLists.txt
ndt_gpu_test/: Makefile  README.md  ndt_gpu_main  ndt_gpu_main.cu
ndt_gpu_test/ndt_gpu/: CMakeLists.txt  Makefile
ndt_pcl_test/: CMakeLists.txt  README.md  main.cpp
ndt_verif/: CMakeLists.txt  README.md  error_verif.cpp  ndt_gpu_cloud.pcd
ptask_test/: Makefile  test  test.c
